# fork-purger

./: .pre-commit-config.yaml  .sample.env  MANIFEST.in  Makefile  README.md  makefile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: build_and_test.yml  ci.yml
disposer/: __init__.py  aggregator.py
purger/: __init__.py  __main__.py  aggregator.py  main.py
tests/: test_purger.py
