[metadata]
name = fork_purger
version = 0.0.1
description = Delete all of your forked repositories on Github.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rednafi/fork-purger
author = Redowan Delowar
author_email = redowan.nafi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click>=7
    httpx[http2]>=0.16.0
python_requires = >=3.8.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    fork-purger = purger.__main__:cli

[options.extras_require]
dev_deps =
    black
    flake8
    isort
    mypy
    pytest
    pytest-asyncio
    pytest-coverage
    twine
